# grpc-rs-squashed

./: Cargo.toml
benchmark/: Cargo.toml
benchmark/src/: bench.rs  client.rs  server.rs  worker.rs
compiler/: Cargo.toml
interop/: Cargo.toml
interop/src/: client.rs  server.rs
proto/: Cargo.toml
src/: channel.rs  client.rs  env.rs  lib.rs  server.rs
src/call/: client.rs  mod.rs  server.rs
